# supermemento

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: health.py
app/db/: __init__.py  neo4j.py  queries.py  utils.py
app/models/: autonomous_cicd.py  chunk.py  document.py  entity.py  memory.py  neo4j.py  user.py
app/models/neo4j/: chunk.py  document.py  entity.py  memory.py
app/schemas/: service.py
app/services/: autonomous_cicd.py  chunking.py  embedding.py  ingestion.py
docs/: BLUEPRINT.md
docs/scanners/: architecture.md  dx.md  orphan-routes.md  performance.md  security.md  tests.md
scripts/: push_changes.py  push_feature.py
tests/: conftest.py  test_chunking.py  test_config.py  test_cors.py  test_db.py  test_db_lifecycle.py  test_db_utils.py  test_docker.py  test_docker_compose.py  test_embedding.py  test_f001_compliance.py  test_f001_final_coverage.py  test_f001_final_verification.py  test_final_handover.py  test_health.py  test_ingestion.py  test_integration_sim.py  test_main.py  test_mcp.py  test_models.py  test_queries.py  test_security.py  test_structure.py  test_validation.py
